Testing fix for menu height on iphone

--- a/css/theme.css
+++ b/css/theme.css
@@ -241,6 +241,7 @@ textarea {
 	z-index: 998;
 	background: #fff;
 	width: 100%;
+	max-height:100%;
 	-webkit-transform: translateY(-100%);
 	-moz-transform: translateY(-100%);
 	-ms-transform: translateY(-100%);
